--- a/backend-team7/src/main/resources/application.properties
+++ b/backend-team7/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.default_schema=public
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+# JWT-Input: values for JWT, ${VALUE} will be inserted from .env file
+jwt.expirationTime=28800000
+jwt.secret=${JWT_SECRET}
+jwt.tokenPrefix=Bearer
+jwt.headerString=Authorization
+jwt.issuer=${JWT_ISSUER}
+jwt.audience=${JWT_AUDIENCE}
