--- a/backend-team7/build.gradle
+++ b/backend-team7/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation "io.jsonwebtoken:jjwt:0.9.1"
 	implementation "javax.xml.bind:jaxb-api:2.4.0-b180725.0427"
-
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
 }
 
